--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
 Flask==2.1.0
-Werkzeug==2.0.1
-gunicorn==20.1.0  #  production-ready server
-beautifulsoup4==4.10.0
-requests==2.26.0
+gensim==4.2.0
+pandas==1.3.3
